test/cli/test-validating-admission-policy/with-params/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: update
policies:
- policy.yaml
resources:
- deployment1.yaml
- deployment2.yaml
vapParams:
- cm.yaml
results:
- kind: Deployment
  isValidatingAdmissionPolicy: true
  policy: check-deployments-replicas
  resources:
  - nginx-deployment1
  result: pass
- kind: Deployment
  isValidatingAdmissionPolicy: true
  policy: check-deployments-replicas
  resources:
  - nginx-deployment2
  result: fail
